# threads

./: .clang-format  .clangd  CMakeLists.txt  main.c
include/: mymutex.h  myscheduler.h  mythreads.h
src/: carousel.c  carousel.h  logging.h  main.c  mutex.c  scheduler.c  scheduler.h  thread.c  thread.h
src/debug/: logging.h
src/utils/: carousel.c  carousel.h
